--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ stepcarousel.setup({
  <div id='cssmenu'>
   <ul>
     <li class='active'><a href='#'><span class="mobile-hidden">Home</span><img class="menu-icon mobile-visible" src="img/grid_4_our-work.png" alt=""></a></li>
-    <li><a href='about.html'><span  class="mobile-hidden">Company</span><img class="menu-icon mobile-visible" src="img/grid_4_our-vision.png" alt=""></a></li>
-    <li><a href='products.html'><span  class="mobile-hidden">Our work</span><img class="menu-icon mobile-visible" src="img/grid_4_our-work.png" alt=""></a></li>
-    <li><a href='employment.html'><span  class="mobile-hidden">Employment</span><img class="menu-icon mobile-visible" src="img/grid_4_employment.png" alt=""></a></li>
-    <li class='last'><a href='contact.html'><span class="mobile-hidden">Contact</span><img class="menu-icon mobile-visible" src="img/grid_4_environment.png" alt=""></a></li>
+    <li><a href='#'><span  class="mobile-hidden">Company</span><img class="menu-icon mobile-visible" src="img/grid_4_our-vision.png" alt=""></a></li>
+    <li><a href='#'><span  class="mobile-hidden">Our work</span><img class="menu-icon mobile-visible" src="img/grid_4_our-work.png" alt=""></a></li>
+    <li><a href='#'><span  class="mobile-hidden">Employment</span><img class="menu-icon mobile-visible" src="img/grid_4_employment.png" alt=""></a></li>
+    <li class='last'><a href='#'><span class="mobile-hidden">Contact</span><img class="menu-icon mobile-visible" src="img/grid_4_environment.png" alt=""></a></li>
     <!-- input type="text" value="" id="search" class="textbox fRight" / -->
    </ul>
  </div>
