--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 
 <!-- MOBILE -->
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
 
 <!--Make sure page contains valid doctype at the very top!-->
 
@@ -71,11 +69,11 @@ stepcarousel.setup({
 <div id="menu_container">
  <div id='cssmenu'>
   <ul>
-    <li class='active'><a href='#'><span class="mobile-hidden">Home</span><img class="menu-icon mobile-visible" src="img/grid_4_our-work.png" alt=""></a></li>
-    <li><a href='#'><span  class="mobile-hidden">Company</span><img class="menu-icon mobile-visible" src="img/grid_4_our-vision.png" alt=""></a></li>
-    <li><a href='#'><span  class="mobile-hidden">Our work</span><img class="menu-icon mobile-visible" src="img/grid_4_our-work.png" alt=""></a></li>
-    <li><a href='#'><span  class="mobile-hidden">Employment</span><img class="menu-icon mobile-visible" src="img/grid_4_employment.png" alt=""></a></li>
-    <li class='last'><a href='#'><span class="mobile-hidden">Contact</span><img class="menu-icon mobile-visible" src="img/grid_4_environment.png" alt=""></a></li>
+    <li class='active'><a href='#'><span class="mobile-hidden">Home</span><img class="menu-icon mobile-visible" src="img/test1.png" alt=""></a></li>
+    <li><a href='#'><span  class="mobile-hidden">Company</span><img class="menu-icon mobile-visible" src="img/test2.png" alt=""></a></li>
+    <li><a href='#'><span  class="mobile-hidden">Our work</span><img class="menu-icon mobile-visible" src="img/test3.png" alt=""></a></li>
+    <li><a href='#'><span  class="mobile-hidden">Employment</span><img class="menu-icon mobile-visible" src="img/test4.png" alt=""></a></li>
+    <li class='last'><a href='#'><span class="mobile-hidden">Contact</span><img class="menu-icon mobile-visible" src="img/test5.png" alt=""></a></li>
     <!-- input type="text" value="" id="search" class="textbox fRight" / -->
    </ul>
  </div>
