--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@ stepcarousel.setup({
 <div id="menu_container">
  <div id='cssmenu'>
   <ul>
-    <li class='active'><a href='#'><span class="mobile-hidden">Home</span><img class="menu-icon mobile-visible" src="img/test1.png" alt=""></a></li>
-    <li><a href='#'><span  class="mobile-hidden">Company</span><img class="menu-icon mobile-visible" src="img/test2.png" alt=""></a></li>
-    <li><a href='#'><span  class="mobile-hidden">Our work</span><img class="menu-icon mobile-visible" src="img/test3.png" alt=""></a></li>
-    <li><a href='#'><span  class="mobile-hidden">Employment</span><img class="menu-icon mobile-visible" src="img/test4.png" alt=""></a></li>
-    <li class='last'><a href='#'><span class="mobile-hidden">Contact</span><img class="menu-icon mobile-visible" src="img/test5.png" alt=""></a></li>
+    <li class='active' style="background-image: url(img/test1.png);"><a href='#'><span class="mobile-hidden">Home</span></a></li>
+    <li style="background-image: url(img/test2.png);"><a href='#'><span  class="mobile-hidden">Company</span></a></li>
+    <li style="background-image: url(img/test3.png);"><a href='#'><span  class="mobile-hidden">Our work</span></a></li>
+    <li style="background-image: url(img/test4.png);"><a href='#'><span  class="mobile-hidden">Employment</span></a></li>
+    <li class='last' style="background-image: url(img/test5.png);"><a href='#'><span class="mobile-hidden">Contact</span></a></li>
     <!-- input type="text" value="" id="search" class="textbox fRight" / -->
    </ul>
  </div>
